--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "userName": "user_trial",
     "password": "7412LIVE!@#$&*()",
-    "server": "virtual2.febracorp.org.br:1433",
+    "server": "virtual2.febracorp.org.br",
     "options": {
         "database": "CONTOSO",
         "encrypt": true
