--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "tedious": "^15.1.2",
+    "tedious": "11.7.0",
+    "tedious-connection-pool": "^1.0.5",
     "tedious-promises": "^0.4.1"
   },
   "devDependencies": {
